# full-stack-from-first-principles

./: .gitignore
JavaScript/: index-css-javascript.html
React/: App.jsx  NOTES.md  index.html  main.jsx  package-lock.json  package.json
backend/: pyproject.toml
backend/fast-api/: 01.async_test.py  02.simple_client_call.py  03_client_outside_endpoint_function.py  04_lifespan-managing_resource_lifecycle.py  config.py  jira_client.py
css/: index-css.html
html/: index.html
