[project]
name = "full-stack-from-first-principles-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dmdeekshithreddy",email = "159103766+dmdeekshithreddy@users.noreply.github.com"}
]
requires-python = "^3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
